[tool.poetry]
name = "service-toolkit"
version = "0.1.0"
description = "Toolkit for services"
authors = ["Wilson Lin <code@wilsonl.in>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
