[package]
name = "log-structured"
version = "0.3.0"
edition = "2021"
description = "Use log-structured storage"
license = "Apache-2.0"
homepage = "https://github.com/wilsonzlin/log-structured"
repository = "https://github.com/wilsonzlin/log-structured.git"
authors = ["Wilson Lin <code@wilsonl.in>"]

[features]
io_file = ["seekable-async-file/tokio_file", "write-journal/io_file"]
io_mmap = ["seekable-async-file/mmap", "write-journal/io_mmap"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
off64 = "0.9"
parking_lot = "0.12.1"
seekable-async-file = "0.14.1"
signal-future = "0.1.1"
tokio = "1"
write-journal = "0.11.1"
