[package]
name = "uring-file"
version = "0.8.0"
edition = "2024"
description = "Async file I/O for Linux using io_uring"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wilsonzlin/monorepo-rs"
documentation = "https://docs.rs/uring-file"
readme = "README.md"
keywords = ["io_uring", "async", "io", "linux", "file"]
categories = ["asynchronous", "filesystem"]

[dependencies]
crossbeam-channel = "0.5.15"
dashmap = "6.1.0"
io-uring = "0.7.8"
libc = "0.2"
once_cell = "1.21.3"
tokio = { version = "1.45.1", features = ["fs", "sync"] }
