[package]
name = "write-journal"
version = "0.13.2"
edition = "2021"
description = "Write to files with a journal"
license = "Apache-2.0"
homepage = "https://github.com/wilsonzlin/write-journal"
repository = "https://github.com/wilsonzlin/write-journal.git"
authors = ["Wilson Lin <code@wilsonl.in>"]

[features]
io_file = ["seekable-async-file/tokio_file"]
io_mmap = ["seekable-async-file/mmap"]

[dependencies]
blake3 = "1"
dashmap = "5.4.0"
off64 = "0.8"
seekable-async-file = "0.14"
signal-future = "0.1.1"
tinybuf = "0.3.0"
tokio = "1"
tracing = "0.1.37"
