[package]
name = "write-journal"
version = "0.15.2"
edition = "2021"
description = "Write to files with a journal"
license = "Apache-2.0"
homepage = "https://github.com/wilsonzlin/write-journal"
repository = "https://github.com/wilsonzlin/write-journal.git"
authors = ["Wilson Lin <code@wilsonl.in>"]

[dependencies]
blake3 = "1"
dashmap = "5.4.0"
futures = "0.3.31"
libc = "0.2.177"
off64 = "0.9"
signal-future = "0.1.1"
tokio = { version = "1", features = ["fs", "rt", "sync"] }
tracing = "0.1.37"
